# lono_libs

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_all_tests.py  run_evaluation.py
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  make.bat  metrics.rst  quickstart_usage.rst
examples/: example_correlation.py  example_multiple_metrics.py  quick start.py
lono_libs/: __init__.py  best_result.py  data_prep.py  models.py  reporting.py  summary_reports.py  unified_runner.py  visualization.py
lono_libs/classification/: LogLoss.py  __init__.py  accuracy.py  balanced_accuracy.py  cohens_kappa.py  confusion_matrix.py  f1_score.py  matthews_correlation_coefficient.py  precision.py  recall.py  roc_auc.py
lono_libs/core/: __init__.py  _base_metric.py  evaluator.py  scoring.py
lono_libs/regression/: __init__.py  correlation.py  kurtosis.py  mae.py  mse.py  r2_score.py  skewness.py
tests/: Accuracy_mock.py  IMetric_mock.py  UnifiedRunner_mock.py  __init__.py  test_evaluator.py  test_unified_runner.py
tests/classification/: test_accuracy.py  test_balanced_accuracy.py  test_cohens_kappa.py  test_confusion_matrix.py  test_f1_score.py  test_log_loss.py  test_matthews_correlation_coefficient.py  test_precision.py  test_recall.py  test_roc_auc.py
tests/regression/: test_correlation.py  test_kurtosis.py  test_mae.py  test_mse.py  test_r2_score.py  test_skewness.py
