[tool.setuptools.packages.find]
exclude = ["lono_results_*"]

[project]
name = "lono_libs"
version = "1.0.0"
description = "A lightweight and modular library for model evaluation and comparison."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Kooroush Masoumi", email = "mo.s.masoumi@gmail.com" },
]
keywords = ["machine-learning", "model-evaluation", "metrics", "python-library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
    "scipy>=1.7",
    "xgboost>=1.6",
    "lightgbm>=3.3",
    "catboost>=1.0",
]

[project.urls]
Homepage = "https://github.com/supremeloki/lono_libs"
Repository = "https://github.com/supremeloki/lono_libs"
Issues = "https://github.com/supremeloki/lono_libs/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
    "uv>=0.1",
    "ipykernel>=6.0",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=4.1",
    "coverage>=7.3",
]